# user-delegated-auth-service

./: .dockerignore  .env.example  .gitignore  CODEX_PROMPT.md  TODO-BACKLOG.md  TODO.md  pyproject.toml
apps/frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/api/ag-ui/: route.ts
apps/frontend/app/api/auth/callback/: route.ts
apps/frontend/app/api/auth/login/: route.ts
apps/frontend/app/api/auth/logout/: route.ts
apps/frontend/app/api/auth/session/: route.ts
apps/frontend/app/api/chat/: route.ts
apps/frontend/app/api/threads/: route.ts
apps/frontend/app/api/threads/[threadId]/: route.ts
apps/frontend/app/api/workflows/: route.ts
apps/frontend/app/api/workflows/[workflowId]/: route.ts
apps/frontend/app/api/workflows/[workflowId]/approve/: route.ts
apps/frontend/components/: approval-card.tsx  assistant-drawer.tsx  assistant-modal.tsx  assistant-root.tsx  auth0-config-panel.tsx  session-controls.tsx  thread.tsx  workflow-context.tsx  workflow-monitor.tsx  workflow-sample.tsx
apps/frontend/e2e/: auth0-workflow.spec.ts
apps/frontend/lib/: auth0-config.ts  workflow-types.ts
apps/frontend/lib/server/: auth0-oidc.ts  auth0-session-store.ts  auth0-session.ts  internal-auth.ts  redaction.ts  supervisor.ts  workflow-store.ts
apps/frontend/tests/: ag-ui-route.test.ts  approval-card.test.tsx  assistant-drawer.test.tsx  assistant-runtime.test.tsx  auth0-config.test.tsx  auth0-oidc.test.ts  auth0-session.test.ts  chat-route.test.ts  supervisor.test.ts  thread-routes.test.ts  workflow-routes.test.ts
apps/frontend/tests/stubs/: ag-ui-client.ts  react-ag-ui.ts
docs/adr/: 0001-agent-service-multicontainer-pod.md
docs/architecture/: agent-service.md  auth0-assistant-ui-workflow.md
infra/docker/: docker-compose.yaml  python-base.Dockerfile
infra/k8s/agent-service/: configmap.yaml  deployment.yaml  secrets.example.yaml  service.yaml
minified/agui-agent-redis/: .env.example  .gitignore  Makefile  README.md  backend.Dockerfile  docker-compose.yaml  pyproject.toml
minified/agui-agent-redis/frontend/: index.html  package-lock.json  package.json  vite.config.ts
minified/agui-agent-redis/frontend/src/: Panels.tsx  RunControls.tsx  a2aClient.ts  aguiClient.ts  main.tsx  styles.css  useAgentRun.ts
minified/agui-agent-redis/scripts/: start-local.ps1
minified/agui-agent-redis/services/ag_ui_gateway/: Dockerfile
minified/agui-agent-redis/services/ag_ui_gateway/ag_ui_gateway_simple/: __init__.py  app.py
minified/agui-agent-redis/services/ag_ui_gateway/gateway_app/: app.py  auth.py  forwarding.py  schemas.py
minified/agui-agent-redis/services/agent_service/: Dockerfile
minified/agui-agent-redis/services/agent_service/adk_agent_service/: app.py  auth.py  contracts.py  request_normalization.py
minified/agui-agent-redis/services/agent_service/adk_agent_service/runtime/: adk_runner.py  agent.py  agui_mapper.py  model_provider.py
minified/agui-agent-redis/services/agent_service/adk_agent_service/stores/: factory.py  in_memory_thread_metadata.py  redis_thread_metadata.py  thread_metadata.py
minified/agui-agent-redis/services/agent_service/agent_service_simple/: __init__.py  adk_runtime.py  app.py  cache.py  models.py
minified/agui-agent-redis/tests/: test_contracts.py
services/ag_ui_gateway/: Dockerfile
services/ag_ui_gateway/ag_ui_gateway/: __init__.py  app.py  client.py  models.py  sse.py
services/ag_ui_gateway/tests/: conftest.py  test_app.py
services/agent_service/: Dockerfile
services/agent_service/agent_service/: agents.py  app.py  models.py  orchestration.py  providers.py  state.py
services/agent_service/tests/: conftest.py  test_app.py
services/agents/authorizer/: Dockerfile
services/agents/authorizer/authorizer_agent/: __init__.py  app.py  config.py  handler.py
services/agents/executor/: Dockerfile
services/agents/executor/executor_agent/: __init__.py  app.py  config.py  handler.py
services/agents/planner/: Dockerfile
services/agents/planner/planner_agent/: __init__.py  app.py  config.py  handler.py
services/chainlit_middleware/: Dockerfile
services/chainlit_middleware/chainlit_middleware/: __init__.py  app.py  config.py  models.py
services/chainlit_middleware/tests/: test_app.py
services/egress_gateway/: Dockerfile
services/egress_gateway/egress_gateway/: __init__.py  app.py  models.py
services/egress_gateway/tests/: test_app.py
services/identity_provider_mock/: Dockerfile
services/identity_provider_mock/identity_provider_mock/: app.py
services/mcps/billing_mcp/: Dockerfile
services/mcps/billing_mcp/billing_mcp/: __init__.py  server.py  tools.py
services/mcps/billing_mcp/tests/: test_tools.py
services/mcps/cloud_mcp/: Dockerfile
services/mcps/cloud_mcp/cloud_mcp/: __init__.py  server.py  tools.py
services/mcps/cloud_mcp/tests/: test_tools.py
services/mcps/developer_mcp/: Dockerfile
services/mcps/developer_mcp/developer_mcp/: __init__.py  server.py  tools.py
services/mcps/developer_mcp/tests/: test_tools.py
services/mcps/identity_mcp/: Dockerfile
services/mcps/identity_mcp/identity_mcp/: __init__.py  server.py  tools.py
services/mcps/identity_mcp/tests/: test_tools.py
services/mcps/network_mcp/: Dockerfile
services/mcps/network_mcp/network_mcp/: __init__.py  server.py  tools.py
services/mcps/network_mcp/tests/: test_tools.py
services/observability_sidecar/: Dockerfile
services/observability_sidecar/observability_sidecar/: __init__.py  app.py  models.py  store.py
services/observability_sidecar/tests/: test_sidecar.py
services/supervisor/: Dockerfile
services/supervisor/agent_service_supervisor/: __init__.py  app.py  config.py  discovery_sqlite.py  routes.py  workflow_api_models.py  workflow_orchestrator.py
services/supervisor/tests/: conftest.py  test_discovery_sqlite.py  test_workflow_routes.py
