[project]
name = "magnum-opus-agent-service"
version = "0.1.0"
description = "Python contract scaffold for a multi-agent workflow service."
readme = "CODEX_PROMPT.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.27.0",
    "pydantic>=2.8.0",
    "redis>=5.0.0",
    "temporalio>=1.8.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pyright>=1.1.380",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "packages/a2a_runtime",
    "packages/agent_runtime",
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/chainlit_middleware",
    "services/egress_gateway",
    "services/agents/authorizer",
    "services/agents/executor",
    "services/agents/planner",
    "services/mcps/billing_mcp",
    "services/mcps/cloud_mcp",
    "services/mcps/developer_mcp",
    "services/mcps/identity_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
include = [
    "a2a_runtime*",
    "ag_ui_gateway*",
    "agent_runtime*",
    "agent_service*",
    "authorizer_agent*",
    "billing_mcp*",
    "chainlit_middleware*",
    "cloud_mcp*",
    "developer_mcp*",
    "egress_gateway*",
    "executor_agent*",
    "identity_mcp*",
    "mcp_runtime*",
    "network_mcp*",
    "observability*",
    "observability_sidecar*",
    "planner_agent*",
    "session_state*",
    "token_broker*",
    "workflow_core*",
    "agent_service_supervisor*",
]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
asyncio_mode = "auto"
pythonpath = [
    "packages/a2a_runtime",
    "packages/agent_runtime",
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/chainlit_middleware",
    "services/egress_gateway",
    "services/agents/authorizer",
    "services/agents/executor",
    "services/agents/planner",
    "services/mcps/billing_mcp",
    "services/mcps/cloud_mcp",
    "services/mcps/developer_mcp",
    "services/mcps/identity_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
testpaths = [
    "packages",
    "services",
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = [
    "packages/a2a_runtime",
    "packages/agent_runtime",
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/chainlit_middleware",
    "services/egress_gateway",
    "services/agents/authorizer",
    "services/agents/executor",
    "services/agents/planner",
    "services/mcps/billing_mcp",
    "services/mcps/cloud_mcp",
    "services/mcps/developer_mcp",
    "services/mcps/identity_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
exclude = ["worktrees/", ".*/tests/", "apps/frontend/node_modules/"]

[[tool.mypy.overrides]]
module = ["fastmcp.*", "redis.*", "temporalio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["billing_mcp.tools", "developer_mcp.tools", "identity_mcp.tools"]
disallow_untyped_decorators = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = [
    "worktrees",
    ".venv",
    "apps/frontend/node_modules",
    "apps/frontend/.next",
    "apps/frontend/test-results",
]
ignore = [
    "packages/*/tests",
    "services/*/tests",
    "services/mcps/*/tests",
]
reportUnusedFunction = "none"
extraPaths = [
    "packages/a2a_runtime",
    "packages/agent_runtime",
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/chainlit_middleware",
    "services/egress_gateway",
    "services/agents/authorizer",
    "services/agents/executor",
    "services/agents/planner",
    "services/mcps/billing_mcp",
    "services/mcps/cloud_mcp",
    "services/mcps/developer_mcp",
    "services/mcps/identity_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
