[project]
name = "magnum-opus-agent-service"
version = "0.1.0"
description = "Python contract scaffold for a multi-agent workflow service."
readme = "CODEX_PROMPT.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.43.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "google-adk>=1.32.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.27.0",
    "pydantic>=2.8.0",
    "redis>=5.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pyright>=1.1.380",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/egress_gateway",
    "services/mcps/cloud_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
include = [
    "ag_ui_gateway*",
    "agent_service*",
    "cloud_mcp*",
    "egress_gateway*",
    "mcp_runtime*",
    "network_mcp*",
    "observability*",
    "observability_sidecar*",
    "session_state*",
    "token_broker*",
    "workflow_core*",
    "agent_service_supervisor*",
]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
asyncio_mode = "auto"
pythonpath = [
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/egress_gateway",
    "services/mcps/cloud_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
testpaths = [
    "packages",
    "services",
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = [
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/egress_gateway",
    "services/mcps/cloud_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
exclude = ["worktrees/", ".*/tests/", "apps/frontend/node_modules/"]

[[tool.mypy.overrides]]
module = ["fastmcp.*", "redis.*"]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = [
    "worktrees",
    ".venv",
    ".uv-cache",
    "apps/frontend/node_modules",
    "apps/frontend/.next",
    "apps/frontend/test-results",
]
ignore = [
    "packages/*/tests",
    "services/*/tests",
    "services/mcps/*/tests",
]
reportUnusedFunction = "none"
extraPaths = [
    "packages/mcp_runtime",
    "packages/observability",
    "packages/session_state",
    "packages/token_broker",
    "packages/workflow_core",
    "services/ag_ui_gateway",
    "services/agent_service",
    "services/egress_gateway",
    "services/mcps/cloud_mcp",
    "services/mcps/network_mcp",
    "services/observability_sidecar",
    "services/supervisor",
]
